# call

./: Cargo.toml  _.txt  package-lock.json  package.json  s  sample_embedding.json  server.js  vite.config.ts  vite.config.ts.timestamp-1684540470589-a15e7b428b6b5.mjs  vite.config.ts.timestamp-1691173165271-286076b0be9c6.mjs  web_socket_server_vite_plugin.js
db/: db  snap.00000000000002DC  snap.00000000000003AC  snap.0000000000002EF2  snap.0000000000005BF7  snap.0000000000006BF3  snap.0000000000006DFA
src/: app.html  hooks.server.ts  lib.rs
src/lib/: Chat.svelte  Controls.svelte  Description.svelte  Feed.svelte  Message.svelte  Offline.svelte  OfflineHeaderUtility.svelte  Video.svelte  build_id.ts  env.ts  getIO.ts  handle_server_error.ts  mongodb.ts  openai.ts  pinecone.ts  redis.ts  req.ts  store.ts  stores.ts  types.ts
src/lib/components/: Audio.svelte  Call.svelte  CallEntry.svelte  Login.svelte  New.svelte  SearchOptions.svelte  SwitchIcon.svelte  Theme.svelte  index.ts
src/lib/constants/: empty_string_embedding.ts  index.ts
src/lib/redis/: index.ts  setup.ts
src/lib/util/: create.ts  float32buffer.ts  redis.ts  req.ts  search.ts  store.ts  string_tags.ts  v_blob.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/432/: +page.svelte
src/routes/donate/: +page.svelte
src/routes/peer_id/: +server.ts
src/routes/pinecone/: +server.ts
src/routes/room/: +page.svelte
src/stuff/: _call.rs  call.rs  crud.rs  db.rs  handler.rs  main.rs  mod.rs  msg.rs  real_estate.rs  tag.rs  user.rs  user_call.rs  util.rs
static/: sw.js
(+30 files in other folders)
