[package]
name = "soda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
warp = "0.3.2"
geo = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
argon2 = "0.4.1"
eddie = "0.4.2"
hmac = "0.12.1"
sha2 = "0.10.6"
jwt = "0.16.0"
log = "0.4.17"
env_logger = "0.9.1"
rand_core = "0.6.4"
futures = "0.3.24"
tokio-stream = "0.1.11"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]